welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:2: error: not found: type boolean
var fini:boolean=false;
         ^BDRBuggle:6: error: too many arguments for method litMessage: ()String
	else if (litMessage("L")) {
                           ^